--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/jsonapi-serializer": "^3.6.6",
     "axios": "^1.5.1",
+    "jsonapi-serializer": "^3.6.9",
     "mobx-react-lite": "^4.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
