--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@material-tailwind/react": "^2.1.2",
     "@types/jsonapi-serializer": "^3.6.6",
     "axios": "^1.5.1",
     "jsonapi-serializer": "^3.6.9",
